fourth commit for dinner project
added contact page, lunch and breakfast sides, created image button for contact link, created stylesheet.css to begin integrating code for cleanup, adjusted page height, added link to cart page and alert messages

--- a/breakfast.html
+++ b/breakfast.html
@@ -129,15 +129,39 @@
 </div>
 
 <div class="submit-btn">    
-    <button onclick= "sidesFunction()">Submit</button>
+    <button onclick= "location.href='breakfast_sides.html';">Next for Sides</button>
+        <script>
+                var buttons = document.getElementByClass("button");
+                buttons.innerHTML = '<img src="waiter-512.png" height=70px width=70px>';
+            </script>
 </div>
 
 
 
 <div class = background-image>
-    <img src="white_devcamp_logo.png" height="100%" width="100%";>
+    <img src="white_devcamp_logo.png" height="500px" width="100%";>
+
+    <div class="footer">
+        <div class="address">
+            123 W 200 N, SLC
+        </div>
+
+        <div class="phoneNumber">
+            555-555-5555
+        </div>
+
+        <div class="email">
+            info@bottegadiner.com
+        </div>
+
     <div class = "askJarvis">
-        <img src="waiter-512.png" height=70px width=70px <button onclick="getElementById(messageForm);"></button></img>
+        <button id="button" onclick="location.href='contact_form.html';"></button>
+
+                <script type="text/javascript">
+                    var buttons = document.getElementById("button");
+                    buttons.innerHTML = '<img src="waiter-512.png" height=70px width=70px>';
+                </script>
+            
         
     </div>
 
