--- a/breakfast_sides.html
+++ b/breakfast_sides.html
@@ -73,8 +73,10 @@
     
 </body>
 
+<script src="menu.js"></script>
+
 <script>
-    var sideMessage = alert('Great choice! Your entree comes with two sides. Please select your sides from the menu below:');
+    var sideMessage = alert('Great choice!' + (fname) + ' Your entree comes with two sides. Please select your sides from the menu below');
 
 </script>
 </html>
