--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 </style>
-
+<script src = "menu.js"></script>
 
 <body> 
 
@@ -127,13 +127,8 @@
 
     
 </body>
-<script>
-    var fname = prompt('Hello, my name is Jarivs and I will be your waiter. Could you I please get your first name for your order?', 'Annonymous');
-    fname.alert = alert('Thank you, ' + fname);
 
+<script src = "menu.js"></script>
 
-    
-
-</script>
 
 </html>
